--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,15 @@ requires-python = ">=3.9"
 dependencies = [
   "langchain>=0.2.0",
   "langgraph>=0.2.0",
+  "langchain_community",
+  "langchain_experimental",
   "langchain-openai>=0.1.0",
   "pydantic>=2",
   "tiktoken",
   "python-dotenv",
+  "stable-baselines3",
+  "gymnasium",
+  "dotenv"
 ]
 
 [tool.pytest.ini_options]
